--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/youth.html.twig
@@ -173,12 +173,6 @@
                 présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
                 nouvelles amitiés sont des points clés pour cette équipe.</p>
 
-            <p>Tout nouveau tout chaud, les teens c’est aussi « Out of the Box ». Un concept innovant qui a lieu une
-                fois
-                par mois. Out of the Box, c’est sortir de sa boîte et de sa zone de confort avec un orateur du Gospel
-                Center
-                qui vient partager son cœur et challenger cette jeune génération.</p>
-
 
             {% if dates_heroes|length %}
 
@@ -249,7 +243,6 @@
         </article>
 
 
-
     </article>
 
     <article class="tab" id="teens">
@@ -269,17 +262,14 @@
                  data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-            <p>2016, une année de nouveau commencements ? Eh oui ! En exclusivité pour vous, un nouveau groupe d’ados
-                vient
-                de voir le jour au Gospel Center de Lausanne !</p>
 
-            <p>Le Gospel Teens, c’est là où il faut aller, si tu as entre 12 et 16 ans, 2 vendredi par mois, de 18h30 à
-                20h30, pour vivre des choses folles avec tes potes et un super team de responsables !</p>
+            <p>Le Gospel Teens, c’est là où il faut aller, si tu as entre 12 et 16 ans, 2 vendredis par mois, de 18h30 à
+                21h00, à l'Avenue de Provence 4, 5ème étage, pour vivre des choses folles avec tes potes et un super
+                team de responsables !</p>
 
             <p>Au menu, sandwich party (pique-nique tiré du sac), message percutant et actuel pour t’aider dans ta vie
-                de
-                tous les jours, jeux, temps en petits groupes pour aller plus loin et plein de belles surprises encore
-                !</p>
+                de tous les jours, jeux, temps en petits groupes pour aller plus loin et plein de belles surprises
+                encore !</p>
 
             {% if dates_teens|length %}
 
