--- a/web/sass/tv.scss
+++ b/web/sass/tv.scss
@@ -615,6 +615,9 @@
 
                     a {
                         @include itemWall(159px);
+                        &.single {
+                            float: none;
+                        }
                     }
 
                 }
