--- a/src/gospelcenter/MediaBundle/Resources/views/Media/audio.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/audio.html.twig
@@ -50,6 +50,38 @@
                 </section>
                 {% if audios|length %}
                     <section class="right">
+
+                        {% if audio.celebration.video %}
+                        <h2><span>Également en vidéo</span></h2>
+                        <a class="single" href="{{ path('gospelcenterMedia_video', {'video': audio.celebration.video.id}) }}">
+                            <div class="container">
+                                {% if audio.celebration.image %}
+                                    {% set tvImg = audio.celebration.image.webPath %}
+                                    <div class="image"
+                                         style="background-image: url('{{ asset(tvImg) }}')"
+                                         data-bg="{{ asset(tvImg)| imagine_filter('tv_wall') }}"
+                                         data-bg_2x="{{ asset(tvImg)| imagine_filter('tv_wall_2x') }}"
+                                         data-bg_tablet="{{ asset(tvImg)| imagine_filter('tv_wall_tablet') }}"
+                                         data-bg_tablet_2x="{{ asset(tvImg)| imagine_filter('tv_wall_tablet_2x') }}"
+                                         data-bg_mobile="{{ asset(tvImg)| imagine_filter('tv_wall_mobile') }}"
+                                         data-bg_mobile_2x="{{ asset(tvImg)| imagine_filter('tv_wall_mobile_2x') }}"
+                                    ></div>
+                                    <div class="gradient"></div>
+                                {% else %}
+                                    <div class="bg"></div>
+                                {% endif %}
+                                <div class="hover">
+                                    <div class="picto_play"></div>
+                                    <span>Regarder la vidéo</span>
+                                </div>
+                                <div class="details">
+                                    <span>{{ audio.celebration.title }}</span>
+                                </div>
+                            </div>
+                        </a>
+                        {% endif %}
+
+
                         <h2><span>Du même orateur</span></h2>
 
                         {% for audio in audios %}
@@ -72,7 +104,7 @@
                                     {% endif %}
                                     <div class="hover">
                                         <div class="picto_play"></div>
-                                        <span>Regarder la vidéo</span>
+                                        <span>Écouter</span>
                                     </div>
                                     <div class="details">
                                         <span>{{ audio.celebration.title }}</span>
