--- a/src/gospelcenter/MediaBundle/Resources/views/Media/videos.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/videos.html.twig
@@ -11,7 +11,7 @@
                         {% if celebration.image %}
                             {% set tvImg = celebration.image.webPath %}
                             <div class="image"
-                                 style="background-image: url('{{ asset(tvImg)| imagine_filter('tv_wall') }}')"
+                                 style="background-image: url('{{ asset(tvImg)| imagine_filter('tv_wall_low') }}')"
                                  data-bg="{{ asset(tvImg)| imagine_filter('tv_wall') }}"
                                  data-bg_2x="{{ asset(tvImg)| imagine_filter('tv_wall_2x') }}"
                                  data-bg_tablet="{{ asset(tvImg)| imagine_filter('tv_wall_tablet') }}"
