--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -137,17 +137,6 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
-                     alt="Jean-Philippe Bärtschi"/>
-                <section>
-                    <h1>Jean-Philippe Bärtschi</h1>
-
-                    <p>Pasteur stagiaire</p>
-                </section>
-            </article>
-
-            <article class="people">
-                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
@@ -211,6 +200,17 @@
                     <p>Conseil de direction</p>
                 </section>
             </article>
+
+            <article class="people">
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                     alt="Jean-Philippe Bärtschi"/>
+                <section>
+                    <h1>Jean-Philippe Bärtschi</h1>
+
+                    <p>Conseil de direction</p>
+                </section>
+            </article>
         {% endspaceless %}
 
     </article>
@@ -253,19 +253,19 @@
         </article>
 
         <article class="frame">
-            <h1>Technique</h1>
+            <h1>Audio-Visuel</h1>
+
+            <p>Marc Rapelli</p>
+
+            <a href="mailto:audio-visuel@gc-lausanne.org">audio-visuel@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Matériel AV</h1>
 
             <p>David van der Maas</p>
 
             <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Multimédia</h1>
-
-            <p>Yoann Gern</p>
-
-            <a href="mailto:multimedia@gc-lausanne.org">multimedia@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
@@ -279,17 +279,17 @@
         <article class="frame">
             <h1>équipiers de prière</h1>
 
-            <p>Nathalie Pecorini</p>
+            <p>Mélanie Gerber</p>
 
             <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>New christians</h1>
+            <h1>New Life</h1>
 
-            <p>David Klopfenstein</p>
+            <p>Benoît Jaccaud</p>
 
-            <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
+            <a href="mailto:newlife@gc-lausanne.org">newlife@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
