update about lausanne

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -229,6 +229,14 @@
         </article>
 
         <article class="frame">
+            <h1>Coordination</h1>
+
+            <p>Hélène Dufour</p>
+
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
             <h1>Enfance et Jeunesse</h1>
 
             <p>Fiona Benavides</p>
@@ -292,13 +300,7 @@
             <a href="mailto:newlife@gc-lausanne.org">newlife@gc-lausanne.org</a>
         </article>
 
-        <article class="frame">
-            <h1>Coordination Gospel Center Lausanne</h1>
 
-            <p>Hélène Dufour</p>
-
-            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
-        </article>
 
     </article>
 
