update about lausanne

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -124,17 +124,6 @@
 
             <article class="people">
                 <img class="radius round"
-                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
-                     alt="Jean-Philippe Bärtschi"/>
-                <section>
-                    <h1>Jean-Philippe Bärtschi</h1>
-
-                    <p>Pastor trainee</p>
-                </section>
-            </article>
-
-            <article class="people">
-                <img class="radius round"
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/PatrickBigler.jpg') }}"
                      alt="Patrick Bigler"/>
                 <section>
@@ -198,6 +187,17 @@
                     <p>Core Leadership</p>
                 </section>
             </article>
+
+            <article class="people">
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                     alt="Jean-Philippe Bärtschi"/>
+                <section>
+                    <h1>Jean-Philippe Bärtschi</h1>
+
+                    <p>Core Leadership</p>
+                </section>
+            </article>
         {% endspaceless %}
 
     </article>
@@ -211,6 +211,14 @@
             <h1>Pastoral Team</h1>
 
             <p>Marc Gallay</p>
+
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Coordination</h1>
+
+            <p>Hélène Dufour</p>
 
             <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
@@ -240,19 +248,19 @@
         </article>
 
         <article class="frame">
-            <h1>Technic</h1>
+            <h1>Audio-visual</h1>
+
+            <p>Marc Rapelli</p>
+
+            <a href="mailto:audio-visuel@gc-lausanne.org">audio-visuel@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Technical equipment</h1>
 
             <p>David van der Maas</p>
 
             <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Multimedia</h1>
-
-            <p>Yoann Gern</p>
-
-            <a href="mailto:multimedia@gc-lausanne.org">multimedia@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
@@ -266,26 +274,20 @@
         <article class="frame">
             <h1>Prayer team</h1>
 
-            <p>Nathalie Pecorini</p>
+            <p>Mélanie Gerber</p>
 
             <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>New christians</h1>
+            <h1>New Life</h1>
 
-            <p>David Klopfenstein</p>
+            <p>Benoît Jaccaud</p>
 
-            <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
+            <a href="mailto:newlife@gc-lausanne.org">newlife@gc-lausanne.org</a>
         </article>
 
-        <article class="frame">
-            <h1>Coordination Gospel Center Lausanne</h1>
 
-            <p>Hélène Dufour</p>
-
-            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
-        </article>
 
     </article>
 
