--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -269,7 +269,7 @@
         </article>
 
         <article class="frame">
-            <h1>Matériel AV</h1>
+            <h1>Matériel technique</h1>
 
             <p>David van der Maas</p>
 
