update jura home

--- a/app/Resources/views/nav/social.html.twig
+++ b/app/Resources/views/nav/social.html.twig
@@ -7,6 +7,7 @@
     <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCAnnecy">Facebook</a></li>
 {% elseif center.ref == "jura" %}
     <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCJura">Facebook</a></li>
+    <li><a target="_blank" id="instagram" class="icon" href="https://www.instagram.com/gospelcenterjura/">Instagram</a></li>
 {% else %}
 
 {% endif %}
