--- a/app/Resources/views/nav/centers.html.twig
+++ b/app/Resources/views/nav/centers.html.twig
@@ -2,4 +2,7 @@
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'annecy'}) }}">Annecy</a></li>
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'jura'}) }}">Jura</a></li>
 {#<li><a href="{{ path('gospelcenterPage_home', {'center': 'montreux'}) }}">Montreux</a></li>#}
-<li><a href="http://www.gospel-center-montreux.org" target="_blank">Montreux</a></li>
+<li><a href="http://www.gospelcentermontreux.com" target="_blank">Montreux</a></li>
+<li><a href="http://www.gc-beroche.org" target="_blank">La Béroche</a></li>
+<li><a href="http://www.gc-lacote.org" target="_blank">La Côte</a></li>
+<li><a href="http://www.gc-fribourg.org" target="_blank">Fribourg</a></li>
