--- a/src/gospelcenter/EventBundle/Resources/views/Event/event.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Event/event.html.twig
@@ -133,7 +133,7 @@
 
             <section id="map" class="location map_full">
 
-                {% set map_url = "http://gospel-center.org/api/locations/" ~ event.location.id ~ ".geojson" %}
+                {% set map_url = "http://gospel-center.com/api/locations/" ~ event.location.id ~ ".geojson" %}
 
                 <iframe src="http://map.gospel-center.com/poi.html?url={{ map_url|url_encode }}"></iframe>
                 <article>
