phone number of GCJ

--- a/src/gospelcenter/PageBundle/Resources/views/Page/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/contact.html.twig
@@ -28,6 +28,8 @@
                 <p>+41 (0)848 123 777</p>
             {% elseif center.ref == "montreux" %}
                 <p>+41 (79) 159 81 09</p>
+            {% elseif center.ref == "jura" %}
+                <p>+41 (0) 32 422 88 31</p>
             {% elseif center.ref == "annecy" %}
                 <p>+33 (0) 4 50 44 33 14</p>
             {% endif %}
