update youth page for GCJ

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/youth.html.twig
@@ -14,14 +14,21 @@
                     <a href="#kids">
                         <h1>Kids</h1>
 
-                        <h2>4-7 ans</h2>
+                        <h2>1-3 Harmos</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="#heroes">
+                        <h1>Heroes</h1>
+
+                        <h2>4-6 Harmos</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#teens">
                         <h1>Teens</h1>
 
-                        <h2>7-13 ans</h2>
+                        <h2>7-8 Harmos</h2>
                     </a>
                 </li>
                 <li>
@@ -40,7 +47,7 @@
 
             <h1>Gospel Minis</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/minis.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/minis.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -88,7 +95,7 @@
 
             <h1>Gospel Kids</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/kids.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/kids.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -129,12 +136,12 @@
         </article>
     </article>
 
-    <article class="tab" id="teens">
+    <article class="tab" id="heroes">
         <article class="blog-style">
 
-            <h1>Gospel Teens</h1>
+            <h1>Gospel Heroes</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/teens.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/heroes.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -146,7 +153,49 @@
                  data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-            <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 5ème à la 8ème Harmos. Expérimenter la
+            <p>Les Heroes, c’est l’endroit à ne pas manquer pour les jeunes de la 4ème à la 6ème. Expérimenter la
+                présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
+                nouvelles amitiés sont des points clés pour cette équipe.</p>
+
+
+            {% if dates_heroes|length %}
+
+                <h3>Prochaines dates</h3>
+
+                <p></p>
+                <ul>
+
+                    {% for date in dates_heroes %}
+
+                        <li>{{ date|datesShort(app.request.locale) }}</li>
+
+                    {% endfor %}
+
+                </ul>
+
+            {% endif %}
+
+        </article>
+    </article>
+
+    <article class="tab" id="teens">
+        <article class="blog-style">
+
+            <h1>Gospel Teens</h1>
+
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/teens.jpg' %}
+
+            <img class="big"
+                 src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
+                 srcset="{{ asset(customImg)| imagine_filter('blog_big_low') }} 2x"
+                 data-img="{{ asset(customImg)| imagine_filter('blog_big') }}"
+                 data-img_2x="{{ asset(customImg)| imagine_filter('blog_big_2x') }}"
+                 data-img_tablet="{{ asset(customImg)| imagine_filter('blog_big_tablet') }}"
+                 data-img_tablet_2x="{{ asset(customImg)| imagine_filter('blog_big_tablet_2x') }}"
+                 data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
+                 data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
+
+            <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 7ème à la 8ème Harmos. Expérimenter la
                 présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
                 nouvelles amitiés sont des points clés pour cette équipe.</p>
 
@@ -175,7 +224,7 @@
 
             <h1>Gospel Youth</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/gospel-youth.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/gospel-youth.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
