--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/en/youth.html.twig
@@ -7,28 +7,35 @@
                     <a href="#minis" class="current focus">
                         <h1>Minis</h1>
 
-                        <h2>Preschool</h2>
+                        <h2>pré-scolaire</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#kids">
                         <h1>Kids</h1>
 
-                        <h2>4-7 years old</h2>
+                        <h2>1-3 Harmos</h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="#heroes">
+                        <h1>Heroes</h1>
+
+                        <h2>4-6 Harmos</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#teens">
                         <h1>Teens</h1>
 
-                        <h2>7-13 years old</h2>
+                        <h2>7-8 Harmos</h2>
                     </a>
                 </li>
                 <li>
                     <a href="#youth">
                         <h1>Gospel Youth</h1>
 
-                        <h2>14-25 years old</h2>
+                        <h2>14-25 ans</h2>
                     </a>
                 </li>
             </ul>
@@ -40,7 +47,7 @@
 
             <h1>Gospel Minis</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/minis.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/minis.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -52,9 +59,6 @@
                  data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-
-            <h3>The English version will come soon.</h3>
-
             <h2 class="underline"><span>Garderie</span></h2>
 
             <p>Chaque dimanche après la louange, les enfants peuvent rejoindre la garderie où ils seront accueillis par
@@ -63,12 +67,12 @@
                 entrer
                 dans une relation tout en douceur avec Dieu.</p>
 
-            <p>Des petites chansons, des histoires, des jeux…tout pour ravir les yeux et le cœur de ces tout-petits
+            <p>Des petites chansons, des histoires, des jeux… tout pour ravir les yeux et le cœur de ces tout-petits
                 !</p>
 
             {% if dates_minis|length %}
 
-                <h3>Next dates</h3>
+                <h3>Prochaines dates</h3>
 
                 <p></p>
                 <ul>
@@ -91,7 +95,7 @@
 
             <h1>Gospel Kids</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/kids.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/kids.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -104,23 +108,64 @@
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-            <p>God is not for adults only, on the contrary! And that’s exactly what each child will find out every
-                week!</p>
+            <p>Dieu n’est pas qu’une affaire d’adultes, bien au contraire ! Et c’est ce que chaque enfant pourra
+                découvrir
+                chaque semaine !</p>
 
-            <p>Accompanied by dynamic leaders, those children will discover fascinating Bible stories, will make friends
-                and
-                can play games and make crafts.</p>
+            <p>Accompagnés par des responsables dynamiques, les enfants découvriront des histoires de la Bible
+                passionnantes, se feront des amis et pourront faire des jeux et des bricolages.</p>
 
-            <p>Because children are the Church of today!</p>
+            <p>Parce que les enfants sont l'Eglise d'aujourd’hui!</p>
 
             {% if dates_kids|length %}
 
-                <h3>Next dates</h3>
+                <h3>Prochaines dates</h3>
 
                 <p></p>
                 <ul>
 
                     {% for date in dates_kids %}
+
+                        <li>{{ date|datesShort(app.request.locale) }}</li>
+
+                    {% endfor %}
+
+                </ul>
+
+            {% endif %}
+        </article>
+    </article>
+
+    <article class="tab" id="heroes">
+        <article class="blog-style">
+
+            <h1>Gospel Heroes</h1>
+
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/heroes.jpg' %}
+
+            <img class="big"
+                 src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
+                 srcset="{{ asset(customImg)| imagine_filter('blog_big_low') }} 2x"
+                 data-img="{{ asset(customImg)| imagine_filter('blog_big') }}"
+                 data-img_2x="{{ asset(customImg)| imagine_filter('blog_big_2x') }}"
+                 data-img_tablet="{{ asset(customImg)| imagine_filter('blog_big_tablet') }}"
+                 data-img_tablet_2x="{{ asset(customImg)| imagine_filter('blog_big_tablet_2x') }}"
+                 data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
+                 data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
+
+            <p>Les Heroes, c’est l’endroit à ne pas manquer pour les jeunes de la 4ème à la 6ème. Expérimenter la
+                présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
+                nouvelles amitiés sont des points clés pour cette équipe.</p>
+
+
+            {% if dates_heroes|length %}
+
+                <h3>Prochaines dates</h3>
+
+                <p></p>
+                <ul>
+
+                    {% for date in dates_heroes %}
 
                         <li>{{ date|datesShort(app.request.locale) }}</li>
 
@@ -138,7 +183,7 @@
 
             <h1>Gospel Teens</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/teens.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/teens.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -150,15 +195,14 @@
                  data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-            <h3>The English version will come soon.</h3>
-
-            <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 5ème à la 8ème Harmos. Expérimenter la
+            <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 7ème à la 8ème Harmos. Expérimenter la
                 présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
                 nouvelles amitiés sont des points clés pour cette équipe.</p>
 
+
             {% if dates_teens|length %}
 
-                <h3>Next dates</h3>
+                <h3>Prochaines dates</h3>
 
                 <p></p>
                 <ul>
@@ -172,17 +216,15 @@
                 </ul>
 
             {% endif %}
-
         </article>
     </article>
-
 
     <article class="tab" id="youth">
         <article class="blog-style">
 
             <h1>Gospel Youth</h1>
 
-            {% set customImg = 'bundles/gospelcenterpage/images/gospel-youth.jpg' %}
+            {% set customImg = 'bundles/gospelcenterpage/images/youth/jura/gospel-youth.jpg' %}
 
             <img class="big"
                  src="{{ asset(customImg)| imagine_filter('blog_big_low') }}"
@@ -194,12 +236,10 @@
                  data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-            <h3>The English version will come soon.</h3>
-
             <p>Reste connecté sur Facebook ou branché à ton whats’app pour être informé des soirées et Events du Gospel
                 Youth ! Dès 14 ans, le samedi de 20h00 à 21h30, au Gospel, au bowling ou au MacDo, le Gospel Youth
                 n’attend
-                plus que toi !</p>
+                plus que toi ! </p>
 
             <p>Du fun, des moments de partages, des délires, la présence de Dieu et de la bonne louange seront au menu
                 de
@@ -214,6 +254,7 @@
                 <p><a href="https://www.facebook.com/pages/Gospel-Youth-Jura/590178811002457" target="_blank">facebook.com/GYJura</a>
                 </p>
             </article>
+
         </article>
 
         {% if dates_youth|length %}
@@ -221,7 +262,7 @@
 
                 <section class="default">
 
-                    <h3>Next dates</h3>
+                    <h3>Prochaines dates</h3>
 
                     {% for date in dates_youth %}
 
@@ -253,6 +294,7 @@
             </section>
 
         {% endif %}
+
     </article>
 
 </section>
