--- a/app/Resources/views/adminGlobalNew.html.twig
+++ b/app/Resources/views/adminGlobalNew.html.twig
@@ -1,6 +1,9 @@
+{% set center = null %}
+
 {% extends "::adminNew.html.twig" %}
 
 {% set local = false %}
+
 
 {% block header_logo %}
     <a id="logo"
