--- a/app/Resources/views/localNew.html.twig
+++ b/app/Resources/views/localNew.html.twig
@@ -55,6 +55,8 @@
                 <img src="{{ asset('images/LogoGCJura.svg') }}">
             {% elseif center.ref == 'annecy' %}
                 <img src="{{ asset('images/LogoGCAnnecy.svg') }}">
+            {% elseif center.ref == 'beroche' %}
+                <img src="{{ asset('images/LogoGCBeroche.svg') }}">
             {% endif %}
         </a>
     </section>
