--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -40,7 +40,7 @@
              data-bg_tablet_2x="{{ customImg| imagine_filter('slide_small_tablet_2x') }}"
              data-bg_mobile="{{ customImg| imagine_filter('slide_small_mobile') }}"
              data-bg_mobile_2x="{{ customImg| imagine_filter('slide_small_mobile_2x') }}">
-        <h2>{% if center.ref == 'lausanne' %}{{ 'gc.celebration.allSunday.lausanne'|trans|nl2br }}{% elseif center.ref == 'annecy' %}{{ 'gc.celebration.allSunday.annecy'|trans|nl2br }}{% elseif center.ref == 'montreux' %}{{ 'gc.celebration.allSunday.montreux'|trans|nl2br }}{% elseif center.ref == 'jura' %}{{ 'gc.celebration.allSunday.jura'|trans|nl2br }}{% endif %}</h2>
+        <h2>{% if center.ref == 'lausanne' %}{{ 'gc.celebration.allSunday.lausanne'|trans|nl2br }}{% elseif center.ref == 'annecy' %}{{ 'gc.celebration.allSunday.annecy'|trans|nl2br }}{% elseif center.ref == 'montreux' %}{{ 'gc.celebration.allSunday.montreux'|trans|nl2br }}{% elseif center.ref == 'jura' %}{{ 'gc.celebration.allSunday.jura'|trans|nl2br }}{% elseif center.ref == 'beroche' %}{{ 'gc.celebration.allSunday.beroche'|trans|nl2br }}{% endif %}</h2>
     </section>
 
     {% if nextCelebrations|length %}
