--- a/app/Resources/views/nav/social.html.twig
+++ b/app/Resources/views/nav/social.html.twig
@@ -8,7 +8,10 @@
 {% elseif center.ref == "jura" %}
     <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCJura">Facebook</a></li>
     <li><a target="_blank" id="instagram" class="icon" href="https://www.instagram.com/gospelcenterjura/">Instagram</a></li>
+{% elseif center.ref == "beroche" %}
+    <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/Gospel-Center-La-Béroche-323574867991530">Facebook</a></li>
 {% else %}
 
 {% endif %}
+
 
