--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/beroche/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/beroche/fr/about.html.twig
@@ -245,7 +245,7 @@
         <article class="frame">
             <h1>Administration</h1>
 
-            <p>Sandrine Zwahlen</p>
+            <p>Mélanie Gerber</p>
 
             <a href="mailto:info@gc-beroche.org">info@gc-beroche.org</a>
         </article>
