--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/beroche/fr/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/beroche/fr/youth.html.twig
@@ -220,7 +220,7 @@
                 et
                 les aidera à bien commencer la semaine!</p>
 
-            <p>Chaque dernier dimanche du mois à 18h00 (sauf exceptions).</p>
+            <p>Pour les dates, veuillez-vous référer à la page « Events »</p>
 
 
             {% if dates_fullPack|length %}
@@ -263,13 +263,8 @@
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-            <p>Le Gospel Teens, c’est là où il faut aller, si tu as entre 12 et 16 ans, 2 vendredis par mois, de 18h30 à
-                21h00, à l'Avenue de Provence 4, 5ème étage, pour vivre des choses folles avec tes potes et un super
-                team de responsables !</p>
-
-            <p>Au menu, sandwich party (pique-nique tiré du sac), message percutant et actuel pour t’aider dans ta vie
-                de tous les jours, jeux, temps en petits groupes pour aller plus loin et plein de belles surprises
-                encore !</p>
+            <p>Le Gospel Teens, un groupe encore en préparation, c’est là où il faudra aller si tu as entre 12 et 16 ans
+                et si tu désires vivre des choses folles avec tes potes et un super team de responsables !</p>
 
             {% if dates_teens|length %}
 
@@ -311,22 +306,15 @@
 
             <h3>T’as entre 16 et 25 ans ?</h3>
 
-            <p>Envie de connaître Dieu, de vivre une vie qui vaut la peine et de sortir de ta routine ? Rejoins-nous 2
-                fois
-                par mois, le samedi soir dès 19h00 à l’Avenue de Provence 4, 5ème étage !</p>
+            <p>Envie de connaître Dieu, de vivre une vie qui vaut la peine et de sortir de ta routine ?</p>
+            <p>Alors prépare-toi à nous rejoindre dès 2017 le vendredi soir dans nos locaux au Château 3 à Vaumarcus !
+                Plus d’info suivront.</p>
 
             <p>Fun, moments de partages, délires, présence de Dieu et de la bonne louange seront au menu de ces folles
                 soirées ! Notre rêve est de faire la différence dans ce monde en suivant l’exemple de Jésus, c’est le
                 tien
                 aussi ? Alors branche-toi en mode Gospel Youth !</p>
 
-            <article class="frame">
-                <h1>Pour nous suivre sur Facebook</h1>
-
-                <p>une seule adresse :</p>
-
-                <p><a href="https://facebook.com/gylausanne" target="_blank">facebook.com/GYLausanne</a></p>
-            </article>
 
         </article>
 
