--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/beroche/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/beroche/fr/about.html.twig
@@ -76,7 +76,7 @@
 
         <p>Nous sommes convaincus de l’importance de la diversité des façons de vivre la foi et de la richesse
             qu’apportent
-            les simples moments de vie partagés. Les célébrations du dimanche soir ne sont qu’une facette de la vie
+            les simples moments de vie partagés. Les célébrations du dimanche matin ne sont qu’une facette de la vie
             chrétienne.</p>
 
         <h2 class="underline"><span>Pourquoi</span></h2>
@@ -106,7 +106,7 @@
             s’investir
             selon ses capacités, son temps et sa motivation dans la vie de sa ”base” et par prolongement dans ses
             diverses
-            activités, dont la célébration du dimanche soir.</p>
+            activités, dont la célébration du dimanche matin.</p>
 
         <h2 class="underline"><span>Finances</span></h2>
 
@@ -142,6 +142,7 @@
         {% spaceless %}
 
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/MichaelGerber.jpg') }}" alt="Michaël Gerber"/>
                 <section>
                     <h1>Michaël Gerber</h1>
 
@@ -151,6 +152,7 @@
             </article>
 
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/MelanieGerber.jpg') }}" alt="Mélanie Gerber"/>
                 <section>
                     <h1>Mélanie Gerber</h1>
 
@@ -160,6 +162,7 @@
             </article>
 
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/FabienneGrisoni.jpg') }}" alt="Fabienne Grisoni"/>
                 <section>
                     <h1>Fabienne Grisoni</h1>
 
@@ -169,6 +172,7 @@
             </article>
 
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/SimeonPfister.jpg') }}" alt="Siméon Pfister"/>
                 <section>
                     <h1>Siméon Pfister</h1>
 
@@ -178,6 +182,7 @@
             </article>
 
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/SandrineStephaneZwahlen.jpg') }}" alt="Sandrine et Stéphane Zwahlen"/>
                 <section>
                     <h1>Sandrine et Stéphane Zwahlen</h1>
 
@@ -186,6 +191,7 @@
 
             </article>
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/DanielPitarella.jpg') }}" alt="Daniel Pitarella"/>
                 <section>
                     <h1>Daniel Pitarella</h1>
 
@@ -194,6 +200,7 @@
 
             </article>
             <article class="people">
+                <img class="radius round" src="{{ asset('bundles/gospelcenterpage/images/leadership/beroche/SonjaBrunner.jpg') }}" alt="Sonja Brunner"/>
                 <section>
                     <h1>Sonja Brunner</h1>
 
