--- a/src/gospelcenter/PageBundle/Resources/views/Page/bases.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/bases.html.twig
@@ -1,4 +1,4 @@
-{% if center.ref != "beroche" %}
+{% if center.ref != ("beroche" and "lacote")%}
 
     <h2 class="slogan findBase">{{ 'gc.page.bases.findBase'|trans }}</h2>
 
