--- a/app/Resources/views/localNew.html.twig
+++ b/app/Resources/views/localNew.html.twig
@@ -57,6 +57,8 @@
                 <img src="{{ asset('images/LogoGCAnnecy.svg') }}">
             {% elseif center.ref == 'beroche' %}
                 <img src="{{ asset('images/LogoGCBeroche.svg') }}">
+            {% elseif center.ref == 'lacote' %}
+                <img src="{{ asset('images/LogoGCLacote.svg') }}">
             {% endif %}
         </a>
     </section>
