--- a/app/Resources/views/ruban_nav.html.twig
+++ b/app/Resources/views/ruban_nav.html.twig
@@ -10,6 +10,7 @@
         <h1>Beta</h1>
         <ul>
             <li><a href="{{ path('gospelcenterPage_home', {'center': 'montreux', 'domain': 'gospel-center.org'}) }}">Montreux</a></li>
+            <li><a href="{{ path('gospelcenterPage_home', {'center': 'lacote', 'domain': 'gospel-center.org'}) }}">La Côte</a></li>
         </ul>
     {% endif %}
 </nav>
