--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/about.html.twig
@@ -134,7 +134,7 @@
 
             <p>Christophe Reichenbach</p>
 
-            <a href="mailto:info@gc-lacote.org">info@gc-lacote.org</a>
+            <a href="mailto:christophe.reichenbach@gospel-center.org">christophe.reichenbach@gospel-center.org</a>
         </article>
 
         <article class="frame">
@@ -142,7 +142,7 @@
 
             <p>Sabine Reichenbach</p>
 
-            <a href="mailto:info@gc-lacote.org">info@gc-lacote.org</a>
+            <a href="mailto:sabine.reichenbach@gospel-center.org">sabine.reichenbach@gospel-center.org</a>
         </article>
 
         <article class="frame">
