--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/youth.html.twig
@@ -243,10 +243,11 @@
                  data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
 
-            <p>Gospel Teens, c’est là où il faut aller, si tu as entre 12 et 15 ans, 2 vendredis par mois, de 19h30 à
-                22h00, à Grens, pour vivre des choses folles avec tes potes et un super team de responsables ! Des jeux,
-                des snacks, des week-end, des messages percutants et actuels pour t’aider dans ta vie de tous les jours,
-                des temps en petits groupes pour aller plus loin et plein de belles surprises encore !</p>
+            <p>Gospel Teens, se retrouve dans le cadre de Ado-Ok et c’est là où il faut aller, si tu as entre 12 et 15
+                ans, 2 vendredis par mois, de 19h30 à 22h00, à Grens, pour vivre des choses folles avec tes potes et un
+                super team de responsables ! Des jeux, des snacks, des week-end, des messages percutants et actuels pour
+                t’aider dans ta vie de tous les jours, des temps en petits groupes pour aller plus loin et plein de
+                belles surprises encore !</p>
 
             {% if dates_teens|length %}
 
