--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/give.html.twig
@@ -48,17 +48,19 @@
             postal order.</p>
 
         <article class="frame">
-            <h1>Support us</h1>
+            <h1>Nous soutenir</h1>
 
-            <p>CCP: 17-637864-2</p>
+            <p>CCP: 14-581704-5</p>
 
-            <p>IBAN: CH70 0900 0000 1763 7864 2</p>
+            <p>IBAN: CH97 0900 0000 1458 1704 5</p>
 
-            <p>Gospel Center Lausanne</p>
+            <p>Eglise Evangélique</p>
 
-            <p>1007 Lausanne</p>
+            <p>Gospel Center La Côte</p>
 
-            <p>Switzerland.</p>
+            <p>1261 Le Vaud</p>
+
+            <p>Suisse.</p>
         </article>
 
     </article>
