--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
@@ -115,7 +115,7 @@
                 <section>
                     <h1>Sabina & Christophe Reichenbach</h1>
 
-                    <p>Pasteurs</p>
+                    <p>Couple pastoral du Gospel Center La Côte</p>
                 </section>
 
             </article>
