--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/en/give.html.twig
@@ -54,11 +54,9 @@
 
             <p>IBAN: CH97 0900 0000 1458 1704 5</p>
 
-            <p>Eglise Evangélique</p>
-
             <p>Gospel Center La Côte</p>
 
-            <p>1261 Le Vaud</p>
+            <p>1196 Gland</p>
 
             <p>Suisse.</p>
         </article>
