--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lacote/fr/about.html.twig
@@ -113,7 +113,7 @@
                      src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Sabina & Christophe Reichenbach"/>#}
                 <section>
-                    <h1>Sabina & Christophe Reichenbach</h1>
+                    <h1>Sabine & Christophe Reichenbach</h1>
 
                     <p>Couple pastoral du Gospel Center La Côte</p>
                 </section>
